# swagger/swagger.json
@@ -62,131 +62,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatosContrato"
-                        }
+                        "description": "{}"
                     },
-                    "403": {
-                        "description": ""
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "datosContrato"
-                ],
-                "description": "create DatosContrato",
-                "operationId": "DatosContratoController.Create",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for DatosContrato content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.DatosContrato"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatosContrato"
-                        }
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/datosContrato/{id}": {
-            "get": {
-                "tags": [
-                    "datosContrato"
-                ],
-                "description": "get DatosContrato by id",
-                "operationId": "DatosContratoController.GetOne",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatosContrato"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "datosContrato"
-                ],
-                "description": "update the DatosContrato",
-                "operationId": "DatosContratoController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for DatosContrato content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.DatosContrato"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatosContrato"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is not int"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "datosContrato"
-                ],
-                "description": "delete the DatosContrato",
-                "operationId": "DatosContratoController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "id is empty"
+                    "404": {
+                        "description": "not found resource"
                     }
                 }
             }
@@ -423,10 +302,6 @@
         }
     },
     "definitions": {
-        "models.DatosContrato": {
-            "title": "DatosContrato",
-            "type": "object"
-        },
         "{}": {
             "title": "{}",
             "type": "object"
@@ -451,7 +326,7 @@
         },
         {
             "name": "datosContrato",
-            "description": "DatosContratoController operations for DatosContrato\n"
+            "description": "DatosContratoController permite traer los datos necesarios para el contrato, dichos datos son consultados de diferentes apis\n"
         }
     ]
 }
